--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="absolute -inset-12 bg-emerald-500/20 blur-[140px] rounded-full"></div>
             <div class="relative glass rounded-[3rem] p-4 overflow-hidden border border-white/10 shadow-2xl">
                 <img
-                    src="Cadarço Elástico De Silicone3.webp"
+                    src="img/Cadarço Elástico De Silicone3.webp"
                     alt="Cadarço elástico de silicone com alta elasticidade instalado no tênis"
                     class="rounded-[2.5rem] w-full h-[420px] object-cover"
                 >
