--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
         <div class="mt-24 pt-12 border-t border-white/5">
             <p class="text-[10px] text-gray-700 uppercase font-black tracking-[0.5em]">
-                © 2026 TechLace • Smart Movement Lab
+                Procure Aqui Ofertas
             </p>
         </div>
     </footer>
