--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <nav class="fixed top-4 left-0 right-0 z-50 px-4">
         <div class="max-w-4xl mx-auto glass rounded-full py-3 px-6 flex justify-between items-center border border-white/10 shadow-2xl">
             <div class="font-extrabold text-xl tracking-tighter italic uppercase">
-                TECH<span class="text-emerald-500">LACE</span>
+                Procure Aqui <span class="text-emerald-500">Ofertas</span>.
             </div>
             <a href="#oferta" class="bg-emerald-500 text-black font-bold px-6 py-2 rounded-full text-sm hover:scale-105 transition active:scale-95 shadow-[0_0_20px_rgba(16,185,129,0.4)]">
                 QUERO O MEU
@@ -139,19 +139,26 @@
     </section>
 
     <!-- Footer (texto removido, botão mantido) -->
-    <footer class="bg-black py-24 px-6 text-center border-t border-white/5">
-        <a href="https://mycollection.shop/procureaquiofertas"
+    <footer class="...">
+
+    <h2 class="...">
+        Procure Aqui <span class="text-emerald-500">Ofertas</span>.
+    </h2>
+
+    <div class="flex flex-col items-center gap-3">
+
+        <a href="#"
            class="inline-flex items-center gap-4 bg-white text-black px-12 py-5 rounded-full font-black hover:bg-emerald-500 transition-all group">
             EXPLORAR VITRINE
-            <i class="fas fa-arrow-right group-hover:translate-x-2 transition-transform"></i>
         </a>
 
-        <div class="mt-24 pt-12 border-t border-white/5">
-            <p class="text-[10px] text-gray-700 uppercase font-black tracking-[0.5em]">
-                Procure Aqui Ofertas
-            </p>
-        </div>
-    </footer>
+        <span class="text-sm text-gray-300">
+            Deseja mais ofertas?
+        </span>
+
+    </div>
+
+</footer>
 
 </body>
 </html>
